Bug 65172 - _remove_stale_systemd_sessions might loop infinitely
Summary: _remove_stale_systemd_sessions might loop infinitely
Status: RESOLVED FIXED
Alias: None
Product: accountsservice
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Matthias Clasen
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-30 11:41 UTC by Marius Vollmer
Modified: 2013-06-06 01:17 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Advance even when continuing. (2.35 KB, patch)
2013-05-30 11:41 UTC, Marius Vollmer
Details | Splinter Review

Description Marius Vollmer 2013-05-30 11:41:35 UTC
Created attachment 80034 [details] [review]
Advance even when continuing.

The attached patch corrects this by making sure that 'node' is always advanced.
Comment 1 Matthias Clasen 2013-06-06 01:17:44 UTC
Attachment 80034 [details] pushed as 33b75f7 - Advance even when continuing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.