Advance even when continuing.

https://bugs.freedesktop.org/show_bug.cgi?id=65172